Fix On Mobile

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -43,9 +43,13 @@
 // RESPONSIVE - MOBILE - TABLET
 @media only screen and (max-width: 739px) {
   .my-name {
+    margin-top: 60px;
     font-size: 1.5rem;
     h4 {
       font-size: 5rem;
+    }
+    p{
+      margin-top: 10px;
     }
   }
 }
